llvm-toolchain-8 (1:8.0.1-1) unstable; urgency=medium

  * New stable release
  * Ship python3-lldb-8 as a new package

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 27 Jul 2019 23:50:48 +0200

llvm-toolchain-8 (1:8.0.1~+rc4-2) unstable; urgency=medium

  * Compile against Python 3
    (Closes: #931029)

 -- Christian Biesinger <cbiesinger@google.com>  Thu, 18 Jul 2019 14:13:56 -0500

llvm-toolchain-8 (1:8.0.1~+rc4-1) unstable; urgency=medium

  * New snapshot release

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 11 Jul 2019 08:39:38 +0200

llvm-toolchain-8 (1:8.0.1~+rc3-1) unstable; urgency=medium

  * New testing release in unstable

  [ Gianfranco Costamagna ]
  * Enable thinlto everywhere except armhf
  * Drop wrong exit 1 from testsuite

  [ Andreas Beckmann ]
  * For now, lld doesn't generate shared libs. Removing the files
    (Closes: #857653, LP: #1829677)


 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 28 Jun 2019 20:15:23 +0200

llvm-toolchain-8 (1:8.0.1~+rc2-1~exp1) experimental; urgency=medium

  * New testing release
  * Only enable thinlto on archs with gold, should fix the ftbfs
  * Add libpfm4-dev as build dep + -DLLVM_ENABLE_LIBPFM=ON as it is
    needed for llvm-exegesis https://bugs.llvm.org/show_bug.cgi?id=42187
  * Improve the rendering of the qualify-clang.sh testsuite

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 08 Jun 2019 11:11:39 +0200

llvm-toolchain-8 (1:8.0.1~+rc1-1~exp2) experimental; urgency=medium

  * Build using thinlto on non stretch, xenial and trusty
    (fails with some undef symbols)
    Option -DLLVM_ENABLE_LTO="Thin" added
  * WebAssembly is now build by default, remove it from the
    experimental list
  * check-polly was executed twice
  * Move the default ARM arch from arm1176jzf-s (armv6) to cortex-a7
    (Closes: #930008)

  [ John Paul Adrian Glaubitz ]
  * Use dh-exec to exclude lib/LLVM*.so on powerpc and
    powerpcspe from llvm-X.Y-dev.install.in
