@@ -1,0 +1,3 @@
+usr/lib/llvm-@LLVM_VERSION@/bin/clangd
+usr/bin/clangd-@LLVM_VERSION@
+
