@@ -1,0 +1,1 @@
+debian/man/clangd-@LLVM_VERSION@.1
